fabric/support/test/tests/noble_ui/event_not_in_trait.stderr
error: Invalid usage of Event, `Config` contains no associated type `Event`, but enum `Event` is declared (in use of `#[noble::event]`). An Event associated type must be declare on trait `Config`.
 --> $DIR/event_not_in_trait.rs:1:1
  |
1 | #[fabric_support::noble]
  | ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
